--- a/src/components/chart-container.css
+++ b/src/components/chart-container.css
@@ -1,7 +1,7 @@
 .toggleButtonDiv{
     display: flex;
     justify-content: space-between;
-    padding: 0 2rem;
+    margin: 0 2rem;
 }
 
 .toggleButton{
