--- a/src/components/chart-container.css
+++ b/src/components/chart-container.css
@@ -1,26 +1,26 @@
-.toggleButtonDiv{
-    display: flex;
-    justify-content: space-between;
-    margin: 0 2rem;
+.toggle-button-div {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 2rem;
 }
 
-.toggleButton{
-    background: rgba(255, 255, 255, 0.1);
-    border: none;
-    cursor: pointer;
-    padding: 0.2rem 1rem;
+.toggle-button {
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+  cursor: pointer;
+  padding: 4px 8px;
 }
 
-.LeftToggleButton{
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
+.left-toggle-button {
+  border-bottom-left-radius: 4px;
+  border-top-left-radius: 4px;
 }
 
-.RightToggleButton{
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
+.right-toggle-button {
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
 }
 
-.active{
-    background: #668CFF;
+.selected-button {
+  background: #668cff;
 }
