--- a/src/components/monthly-widget.css
+++ b/src/components/monthly-widget.css
@@ -1,8 +1,13 @@
 .monthly-widget {
   margin: 10px;
   border: 1px solid white;
+  cursor: pointer;
 }
 
 .monthly-widget-active {
   border-color: black;
+}
+
+.mini-chart {
+  cursor: pointer !important;
 }
